--- a/www/dcrg/style.css
+++ b/www/dcrg/style.css
@@ -549,7 +549,7 @@ body.pdf-mode .sticky-dashboard {
 body.pdf-mode .input-group input {
     background: transparent !important;
     border: none !important;
-    border-bottom: 1px dashed black !important;
+    border-bottom: none !important;
     text-align: right !important;
     padding: 2px !important;
     font-weight: bold !important;
